--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/FPSMap.FPSMap
+EditorStartupMap=/Game/Map/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Map/FPSMap.FPSMap
+GameDefaultMap=/Game/Map/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/BP_FPSGamemode.BP_FPSGamemode_C
 GlobalDefaultServerGameMode=None
